--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
             color: #2c6e49;
         }
 
+        /* صورة التعريف */
+        .about-image {
+            width: 100%;
+            border-radius: 5px;
+            margin-top: 10px;
+        }
+
         /* قسم المنتجات */
         .products {
             display: flex;
@@ -91,6 +98,8 @@
     <section id="about" class="container">
         <h2>من نحن</h2>
         <p>نحن شركة متخصصة في تقديم منتجات غذائية طبيعية وصحية مصممة خصيصًا لتلبية احتياجات كبار السن، مع التركيز على الجودة والتغذية المتوازنة.</p>
+        <p><strong>نحن نقدم خدماتنا داخل المملكة المغربية.</strong></p>
+        <img src="https://images.pexels.com/photos/302083/pexels-photo-302083.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="غذاء صحي" class="about-image">
     </section>
 
     <section id="products" class="container">
@@ -114,7 +123,7 @@
     <section id="contact" class="container">
         <h2>اتصل بنا</h2>
         <p>يمكنك التواصل معنا عبر البريد الإلكتروني: <strong>info@ghidahalhayat.com</strong></p>
-        <p>أو عبر الهاتف: <strong>+212 600 000 000</strong></p>
+        <p>أو عبر الهاتف: <strong>212 600 000 000</strong></p>
     </section>
 
     <footer>
